syntax = "proto3";

package generated;

option go_package = "github.com/dim-pep/Market/shared/generated;generated";

service OrderService {
  rpc GetOrderStatus (GetOrderStatusRequest) returns (GetOrderStatusResponse);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message GetOrderStatusRequest {
  string order_id = 1;
  string user_id = 2;
}

message GetOrderStatusResponse {
  string status = 1;
}

message CreateOrderRequest {
  string user_id = 1;
  string market_id = 2;
  string order_type = 3;
  double price = 4;
  int64 quantity = 5;
}

message CreateOrderResponse {
  string order_id = 1;
  string status = 2;
}
